--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Micaella CV</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=2">
+<script src="script.js?v=2"></script>
 </head>
 <body>
 <canvas id="stars"></canvas>
@@ -452,3 +454,4 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
