--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <p>
     Outside of my professional journey, I enjoy making a difference in every space I’m in 
     whether its supporting small businesses through my freelance web and software solutions or  
-    collaborating with an NGO I always have something that keeps me motivated. 
-    I am passionate about creating work that leaves an impact and tells a meaningful story just as raw data should should be made to 
+    collaborating with an NGO, I always have something that keeps me motivated. 
+    I am passionate about creating work that leaves an impact and tells a meaningful story just as raw data should be made to 
     find actionable insights and tell a story. 
       <br>
   <br>
@@ -65,7 +65,7 @@
     In my free time, I love going to pilates classes, taking my two yorkies for walks along the beach, and staying active at the gym. I'm also 
     working on a passion project: coding a game in Unity, which challenges my creativity and keeps me inspired to explore new ideas. 
     Whether through work
-    or play, I aim to bring curiosity, creativity and impact in everything I do— it’s still a work in progress,
+    or play, I aim to bring curiosity, creativity and impact in everything I do it’s still a work in progress,
     but the process of building something creative from scratch keeps me inspired and
     constantly learning. I also enjoy exploring new technologies, staying curious, and
     bringing a bit of fun into the tech world. 
@@ -452,5 +452,6 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
 
 
